<resources>

    <string name="app_name">炫宝</string>
    <string name="sever_error">服务器异常，请稍后再试</string>
    <string name="i_try_try">炫宝</string>
    <string name="my_order">我的领取</string>
    <string name="my_profit">我的收益</string>
    <string name="order_detail">订单详情</string>
    <string name="ta_say_goods_list">Ta说商品列表</string>
    <string name="back_itry">返回尝鲜</string>
    <string name="ta_say">炫评</string>
    <string name="get_intergral">赚分</string>
    <string name="mine">我的</string>
    <string name="no_data">没有数据</string>
    <string name="loading">loading......</string>
    <string name="exercise">活动</string>
    <string name="exercise_detail">活动详情</string>
    <string name="exercise_introduce">活动说明</string>
    <string name="join_now">马上参与</string>
    <string name="further">即将上线</string>
    <string name="taste_guild">常见问题</string>
    <string name="help">帮助</string>
    <string name="type">分类</string>
    <string name="mobilephone">手机号</string>
    <string name="password">请输入密码</string>
    <string name="input_check_code">请输入验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_password">找回密码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="login">登&#160;&#160;&#160;&#160;录</string>
    <string name="register">注&#160;&#160;&#160;&#160;册</string>
    <string name="register_protocol">我已同意用户使用协议</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="get_check_word">获取验证码</string>
    <string name="input_check_word">请输入验证码</string>
    <string name="not_true_phone_number">请输入正确手机号</string>
    <string name="password_can_not_be_null">请输入密码</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_list">商品列表</string>
    <string name="goods_intrduce">商品介绍</string>
    <string name="award_intrduce">奖品说明</string>
    <string name="win_user_info">中奖者信息</string>
    <string name="goods_img_text_detail">图文详情</string>
    <string name="protocol_title">用户使用协议</string>
    <string name="goods_get_market">领取店铺</string>
    <string name="markets">商家</string>
    <string name="near_markets">附近商家</string>
    <string name="market_map">商家定位</string>
    <string name="market_detail">商家详情</string>
    <string name="doing">正在进行</string>
    <string name="goods_win_list">已体验用户</string>
    <string name="next">下一步</string>
    <string name="look_ta_Say">查看Ta说</string>
    <string name="you_need_spend">积分:</string>
    <string name="goods_get_intrduce">领取说明</string>
    <string name="write_report">试用报告</string>
    <string name="taste_report">体验报告</string>
    <string name="no_report">没有报告</string>
    <string name="good_luck">GOOD&#160;LUCK</string>
    <string name="congratulations">点击领取</string>
    <string name="share_to_get_again">即刻分享，再来一次</string>
    <string name="sure_order">订单确认</string>
    <string name="get_self_adress">领取地址</string>
    <string name="get_method">请在下方选择领取商家，确认邮寄或自取</string>
    <string name="get_adress">收货地址</string>
    <string name="add_adress">添加地址</string>
    <string name="can_send_free">本商品可为您提供免费邮寄</string>
    <string name="sure_info">确认信息</string>
    <string name="wait_get">等待自提</string>
    <string name="sure_pay">确认支付</string>
    <string name="look_goods_state">查看商品状态</string>
    <string name="finish">已完成</string>
    <string name="share">炫耀一下</string>
    <string name="sure_get">确认收货</string>
    <string name="again">分享一下</string>
    <string name="setting_password">密码设置</string>
    <string name="password_hint">请输入6-12位密码</string>
    <string name="check_password_hint">请再次输入密码</string>
    <string name="password_not_same">两次密码输入不一致,请重新输入</string>
    <string name="bt_finish">完&#160;&#160;&#160;&#160;成</string>
    <string name="collect_goods">收藏的商品</string>
    <string name="collect_ta_say">收藏的Ta说</string>
    <string name="my_itry">我的试试</string>
    <string name="words">留言</string>
    <string name="getted">已完成</string>
    <string name="no_pay">待支付</string>
    <string name="not_get">待领取</string>
    <string name="lose_useing">已失效</string>
    <string name="my_ta_say">我的Ta说</string>
    <string name="my_house">我的收藏</string>
    <string name="my_favourable">我的优惠</string>
    <string name="my_integral">我的积分</string>
    <string name="integral_history">积分记录</string>
    <string name="my_share">我的分享</string>
    <string name="suggestion">意见反馈</string>
    <string name="receive_name">请输入收货人姓名</string>
    <string name="receive_phone">请输入11位收货人手机号</string>
    <string name="receive_zip_code">请输入6位邮政编码</string>
    <string name="receive_city">请选择省、市、区</string>
    <string name="receive_address">请输入具体街道地址</string>
    <string name="alter_password">密码设置</string>
    <string name="exit_login">退出登录</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="old_pw">请输入6-12位密码</string>
    <string name="new_pw">请输入新密码</string>
    <string name="new_pw_again">请再次输入新密码</string>
    <string name="user_info">个人信息</string>
    <string name="header">头像</string>
    <string name="user_name">昵称</string>
    <string name="qr_code">邀请二维码</string>
    <string name="account">账号</string>
    <string name="input_your_tasay">请输入你的Ta说</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="my_post_address">我的邮寄地址</string>
    <string name="get_today">今日可赚</string>
    <string name="write_ta_say">写Ta说</string>
    <string name="now_integral">当前积分</string>
    <string name="message">消息</string>
    <string name="suggest">意见与帮助</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

</resources>