<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_marginTop="12dip"
        android:background="@color/white" >

        <EditText
            android:id="@+id/mobilephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dip"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:hint="@string/mobilephone"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/itry_list_goods_name"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/check_code"
            android:layout_width="80dip"
            android:layout_height="24dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dip"
            android:layout_marginTop="8dip"
            android:background="@drawable/wheel_gray_back"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/get_check_code"
            android:textColor="@color/login_def_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="22dip"
            android:background="@null"
            android:hint="@string/input_check_code"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/itry_list_goods_name"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dip"
            android:background="@color/line" />
    </RelativeLayout>

    <TextView
        android:id="@+id/bt_sure"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:layout_marginTop="44dip"
        android:background="@color/tab_check"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>