<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="22dip"
            android:background="@null"
            android:maxLength="12"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/itry_list_dome_color"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="20dip"
            android:background="@color/line" />

        <EditText
            android:id="@+id/check_password"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="22dip"
            android:background="@null"
            android:hint="@string/check_password_hint"
            android:maxLength="12"
            android:minEms="6"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/itry_list_dome_color"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="135dip"
        android:background="@color/tab_check"
        android:gravity="center"
        android:text="@string/bt_finish"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>