<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/line" />

        <EditText
            android:id="@+id/old_pw"
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/old_pw"
            android:maxLength="12"
            android:paddingLeft="25dip"
            android:paddingRight="22dip"
            android:password="true"
            android:textColor="@color/itry_list_goods_name"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="22dip"
            android:background="@color/line" />

        <EditText
            android:id="@+id/new_pw"
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/new_pw"
            android:maxLength="12"
            android:paddingLeft="25dip"
            android:paddingRight="22dip"
            android:password="true"
            android:textColor="@color/itry_list_goods_name"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="25dip"
            android:background="@color/line" />

        <EditText
            android:id="@+id/new_pw2"
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/new_pw_again"
            android:maxLength="12"
            android:paddingLeft="25dip"
            android:paddingRight="22dip"
            android:password="true"
            android:textColor="@color/itry_list_goods_name"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/line" />
    </LinearLayout>

    <TextView
        android:id="@+id/bt_sure"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:layout_marginTop="44dip"
        android:background="@color/tab_check"
        android:gravity="center"
        android:text="@string/bt_finish"
        android:textColor="@color/white" />

</LinearLayout>