<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/line" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/receive_name"
            android:maxLength="8"
            android:paddingLeft="25dip"
            android:paddingRight="22dip"
            android:textColor="@color/itry_list_goods_name"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="22dip"
            android:background="@color/line" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/receive_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="25dip"
            android:paddingRight="22dip"
            android:textColor="@color/itry_list_goods_name"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="25dip"
            android:background="@color/line" />

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/receive_zip_code"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="25dip"
            android:paddingRight="22dip"
            android:textColor="@color/itry_list_goods_name"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="22dip"
            android:background="@color/line" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            android:hint="@string/receive_city"
            android:paddingLeft="25dip"
            android:singleLine="true"
            android:textColor="@color/itry_list_goods_name"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="22dip"
            android:background="@color/line" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="88dip"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/receive_address"
            android:maxLength="30"
            android:maxLines="2"
            android:paddingLeft="25dip"
            android:paddingRight="22dip"
            android:textColor="@color/itry_list_goods_name"
            android:textColorHint="@color/itry_list_dome_color"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/line" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="44dip"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dip"
            android:text="设为默认地址"
            android:textColor="@color/itry_list_goods_name"
            android:textSize="15sp" />

        <com.aibaide.xuanbao.views.CoolSwitch
            android:id="@+id/coolswitch"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" >
        </com.aibaide.xuanbao.views.CoolSwitch>
    </RelativeLayout>

    <TextView
        android:id="@+id/bt_sure"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:layout_marginTop="44dip"
        android:background="@color/tab_check"
        android:gravity="center"
        android:text="@string/bt_finish"
        android:textColor="@color/white" />

</LinearLayout>